src/test/resources/fixtures/parser/solidity_official_tests/shouldSucceed/multipleContracts.sol
contract test {
  function fun() {
    uint64(2);
  }
}
contract test2 {
  function fun() {
    uint64(2);
  }
}