src/test/resources/fixtures/parser/solidity_official_tests/shouldFail/variable_definition_in_function_parameter.sol
contract test {
  function fun(var a) {}
}